Update to use latest versions, and data-hook.

--- a/template/shared/templates/body.jade
+++ b/template/shared/templates/body.jade
@@ -11,4 +11,4 @@ body
           li
             a(href="/info") more info
   .container
-    main(role="page-container")
+    main(data-hook="page-container")
