--- a/template/shared/templates/includes/formInput.jade
+++ b/template/shared/templates/includes/formInput.jade
@@ -1,6 +1,6 @@
 div.form-group
-  label(role='label')
-  div(role='message-container')
-    .alert.alert-danger(role='message-text')
+  label(data-hook='label')
+  div(data-hook='message-container')
+    .alert.alert-danger(data-hook='message-text')
   input.form-control
 
