--- a/template/shared/templates/includes/person.jade
+++ b/template/shared/templates/includes/person.jade
@@ -1,6 +1,6 @@
 li.person.list-group-item
-  img(role="avatar", width="40", height="40")
-  a(role="name")
+  img(data-hook="avatar", width="40", height="40")
+  a(data-hook="name")
   span.btn-group.pull-right 
-    a.btn.btn-default(role="action-edit") edit 
-    a.btn.btn-danger(href="#", role="action-delete") delete
+    a.btn.btn-default(data-hook="action-edit") edit 
+    a.btn.btn-danger(href="#", data-hook="action-delete") delete
