--- a/template/shared/templates/pages/personView.jade
+++ b/template/shared/templates/pages/personView.jade
@@ -1,9 +1,9 @@
 section.page.view-person
   
-  h2(role='name')
+  h2(data-hook='name')
 
-  img(role='avatar', width='80',  height='80')
+  img(data-hook='avatar', width='80',  height='80')
 
   .buttons
-    a.btn(role='edit') Edit
-    button.btn(role='delete') Delete
+    a.btn(data-hook='edit') Edit
+    button.btn(data-hook='delete') Delete
