Fixed a couple of problems with the tests: Container for .page had changed, added button to create random people.

--- a/template/shared/templates/pages/collectionDemo.jade
+++ b/template/shared/templates/pages/collectionDemo.jade
@@ -24,6 +24,7 @@ section.page.pageOne
     button.btn.btn-default(data-hook="reset") .reset() 
     button.btn.btn-default(data-hook="fetch") .fetch() 
     button.btn.btn-default(data-hook="shuffle") .shuffle() 
+    button.btn.btn-default(data-hook="add") .addRandom()
     a.btn.btn-default(href="/person/add") Add Person
 
   p Events are always managed so you don't get any leaks.
