Added an image to a new footer template.  This will test the exposure of the images directory.

--- a/template/shared/templates/body.jade
+++ b/template/shared/templates/body.jade
@@ -12,3 +12,24 @@ body
             a(href="/info") more info
   .container
     main(data-hook="page-container")
+    footer.footer-main
+      nav.nav-footer.cf
+        //- Three columns of links
+        div
+          a.nav-item.external(href="http://ampersandjs.com/learn") Learn
+          a.nav-item.external(href="http://ampersandjs.com/docs") Docs
+          a.nav-item.external(href="http://tools.ampersandjs.com") Modules
+        div
+          a.nav-item.external(href="https://gitter.im/AmpersandJS/AmpersandJS") Chatroom
+          a.nav-item.external(href="https://trello.com/b/UxylNzHr/ampersand-js-roadmap") Roadmap
+          a.nav-item.external(href="http://ampersandjs.com/contribute") Contribute
+        div
+          a.nav-item.external(href="http://ampersandjs.com/security") Security
+          a.nav-item.external(href="https://github.com/ampersandjs") Github
+          a.nav-item.external(href="https://twitter.com/ampersandjs") Twitter
+      p Sponsored by 
+        a(href="https://andyet.com") &amp;yet 
+        br
+        | with the help of our 
+        a(href="http://ampersandjs.com/contribute") contributors
+      a.logo.logo-ampersand-pink(href="http://ampersandjs.com") &amp;
