Handle long lines on small screen width

--- a/template/shared/templates/includes/person.jade
+++ b/template/shared/templates/includes/person.jade
@@ -1,4 +1,4 @@
-li.person.list-group-item
+li.person.list-group-item.container
   img(data-hook="avatar", width="40", height="40")
   a(data-hook="name")
   span.btn-group.pull-right 
