--- a/template/shared/test/index.jade
+++ b/template/shared/test/index.jade
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/spacemonkey.css', type='text/css')
     script(src='/jquery-1.9.1.min.js')
     script(src='/qunit.js')
-    script(src='/underscore.js')
+    script(src='/lodash-3.6.0.js')
     script(src='/spacemonkey.js')
     script(src='/spacemonkey.demo.js')
     script(src='/functionalTests.js')
@@ -15,7 +15,7 @@ html
     #appContainer
         h2 App
         iframe#app
-    aside#instructionContainer 
+    aside#instructionContainer
         h2 Instructions
         ol#instructions
     #qunitContainer
@@ -24,4 +24,3 @@ html
         h2#qunit-userAgent
         ol#qunit-tests
         #qunit-fixture test markup
-
